Fix filmography alignment

--- a/less/main.less
+++ b/less/main.less
@@ -510,6 +510,7 @@ footer {
     letter-spacing: 0.4px;
     line-height: 21px;
     padding: 12px 0 12px 20px;
+    vertical-align: top;
 
     &:first-child {
       padding-left: 12px;
